--- a/plugin.xml
+++ b/plugin.xml
@@ -3,13 +3,13 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	id="com.rjfun.cordova.mobfox"
-	version="1.1.0">
+	version="2.0.0">
       
     <name>MobFox Ad</name>
 	<description>Cordova/PhoneGap plugin for MobFox, support Banner, Interstitial and Video Ad. Support many Ad networks with server-side integration to maximize revenue.</description>
 	<author>Liming Xie</author>
 	<license>MIT</license>
-	<keywords>ad,admob,google,play,services,iad,mobfox</keywords>
+	<keywords>ad,mobfox,rjfun</keywords>
     <repo>https://github.com/floatinghotpot/cordova-mobfox.git</repo>
     <issue>https://github.com/floatinghotpot/cordova-mobfox/issues</issue>
 
@@ -21,13 +21,14 @@
         <clobbers target="window.MobFox" />
     </js-module>
 
+	<dependency id="com.rjfun.cordova.ad" version=">=1.0.0"/>
     <dependency id="com.mobfox.sdk" version=">=6.0.0"/>
 
     <!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="MobFox">
-                <param name="android-package" value="com.rjfun.cordova.mobfox.MobFox"/>
+                <param name="android-package" value="com.rjfun.cordova.mobfox.MobFoxPlugin"/>
             </feature>
         </config-file>
         <source-file src="src/android/cordova-mobfox.jar" target-dir="libs" />
@@ -38,13 +39,10 @@
      <platform name="ios">
          <config-file target="config.xml" parent="/*">
              <feature name="MobFox">
-                 <param name="ios-package" value="CDVMobFox" />
+                 <param name="ios-package" value="MobFoxPlugin" />
              </feature>
          </config-file>
-         <header-file src="src/ios/CDVMobFox.h" />
-         <source-file src="src/ios/CDVMobFox.m" />
-         <header-file src="src/ios/MobFoxAds.h" />
-         <source-file src="src/ios/libMobFoxAds.a" framework="true" />
+         <source-file src="src/ios/libCordovaMobFox.a" framework="true" compiler-flags="-force_load"/>
 	</platform>
 
 </plugin>
